# AITests

./: README.md  pyproject.toml  setup.py
ai_experiments/: __init__.py  __main__.py  constants.py  game.py  hello.py  scene.py  scene_data_manager.py  scene_editor.py  scene_object.py  ui.py
ai_experiments/assets/: scene_data.json
ai_experiments/assets/items/: readme.txt
my_python_package/: __init__.py  __main__.py  hello.py
tests/: test_hello.py
